# sql-insert-generator

./: README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml
local/postgres/init/: init.sql
src/sql_insert_generator/: __init__.py  main.py
tests/: test_main.py
