[project]
name = "sql-insert-generator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gmidorii", email = "stitow14@gmail.com" }
]
dependencies = [
    "mysql-connector-python>=8.1.0",
    "psycopg2-binary>=2.9.6",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true
